# ClawCures

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  RESEARCH.md
examples/: plan_template.json  portfolio_input.json
scripts/: build_release_artifacts.sh
src/refua_campaign/: __init__.py  agent_routing.py  autonomy.py  campaign_state.py  cli.py  clinical_trials.py  config.py  evidence_quality.py  openclaw_client.py  orchestrator.py  portfolio.py  promising_cures.py  prompts.py  refua_mcp_adapter.py  regulatory_bridge.py  target_discovery.py  translational_handoff.py  web_evidence.py
src/refua_campaign/prompts/: default_system_prompt.txt
tests/: test_agent_routing.py  test_autonomy.py  test_campaign_state.py  test_cli.py  test_clinical_trials.py  test_config.py  test_evidence_quality.py  test_orchestrator_flow.py  test_parsing.py  test_policy.py  test_portfolio.py  test_promising_cures.py  test_refua_mcp_adapter_parallel.py  test_target_discovery.py  test_translational_handoff.py  test_version.py  test_web_evidence.py  test_web_tools.py
