[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClawCures"
version = "0.6.0"
description = "Campaign orchestration layer built on OpenClaw planning and refua-mcp execution."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  {name = "JJ Ben-Joseph", email = "jj@tensorspace.ai"}
]
keywords = [
  "drug discovery",
  "machine learning",
  "orchestration",
  "planning",
  "mcp",
  "refua",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "refua-mcp>=0.5.2",
]

[project.urls]
Homepage = "https://agentcures.com/"
Repository = "https://github.com/agentcures/refua"
Documentation = "https://github.com/agentcures/refua#readme"
Issues = "https://github.com/agentcures/refua/issues"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.5.1",
]

[project.scripts]
ClawCures = "refua_campaign.cli:main"

[tool.poetry]
packages = [{ include = "refua_campaign", from = "src" }]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refua_campaign = ["prompts/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
